trunk/Archive2/43/eda5b830927c01/output
main.cpp:4:13: error: expected ';' at end of declaration
  void foo() noexcept(noexcept(T())) {}
            ^
            ;
main.cpp:4:14: error: C++ requires a type specifier for all declarations
  void foo() noexcept(noexcept(T())) {}
             ^~~~~~~~
main.cpp:4:32: error: use of undeclared identifier 'T'
  void foo() noexcept(noexcept(T())) {}
                               ^
main.cpp:4:37: error: expected ';' after top level declarator
  void foo() noexcept(noexcept(T())) {}
                                    ^
                                    ;
main.cpp:15:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
5 errors generated.
